namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-arns-assessment-platform-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-arns-assessment-platform-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "arns-core-exp-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "aap-alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS ARNS Assessment Platform"
    cloud-platform.justice.gov.uk/owner: "HMPPS Assess Risks Strengths and Needs: arns@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-arns-assessment-platform-api.git,https://github.com/ministryofjustice/hmpps-arns-assessment-platform-ui.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-assessments-live"
